--- a/FineBind/index.html
+++ b/FineBind/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>FineBind 方白科技</title>
 
+
+<meta name="viewport" content="initial-scale=1.0">
 <!-- 字體 -->
 <link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><link rel="stylesheet" href="css/reset.css">
