--- a/FineBind/intern.html
+++ b/FineBind/intern.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="initial-scale=1.0">
+
 <title>加入我們 | 方白科技</title>
 <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 <style>
@@ -254,9 +256,9 @@ body {
 	<h2>快點加入我們吧</h2>
 	<p>這裡可以方一些，要給新近實習生的話，可以讓他們知道我們公的氣氛。這裡可以方一些，要給新近實習生的話，可以讓他們知道我們公的氣氛。這裡可以方一些，要給新近實習生的話，可以讓他們知道我們公的氣氛。這裡可以放一些，要給新近實習生的話，可以讓他們知道我們公的氣氛。	</p>
 		<div class="btn-con">
-			<div class="btn btn-lg btn-primary" >
-				加入我們！！
-			</div>
+			<a class="btn btn-lg btn-primary" href="https://www.facebook.com/messages/finebindtech" >
+				私訊方白，加入我們！！
+			</a>
 		</div>
 		</div>
 	</div>
