--- a/FineBind/index.html
+++ b/FineBind/index.html
@@ -201,6 +201,13 @@ margin: 30px auto !important;
 @media (min-width: 1200px	) { 
 	.product > .txt{ width:990px !important; } 
  }
+ 
+@media (max-width:320px){
+	.game > .con  img { 
+		width:80px !important;
+	}
+}
+
 </style>
 </head>
 
