--- a/FineBind/index.html
+++ b/FineBind/index.html
@@ -189,6 +189,17 @@ margin: 30px auto !important;
 	width:auto;
 	float:none;
 }
+
+	.product > .txt { 
+		margin-left:0px !important; 
+		padding-left:0px !important;
+		border-left:none !important;
+	
+	}
+		.product  .tit { 
+		text-align: center !important;
+	}
+
 }
 @media (min-width: 768px) and (max-width: 991px) { 
 	.product >.txt { width:570px !important ; } 
@@ -204,8 +215,22 @@ margin: 30px auto !important;
  
 @media (max-width:320px){
 	.game > .con  img { 
-		width:80px !important;
+		width:auto !important;
 	}
+	
+	#banner-b h1 {
+		display:block;
+		font-weight:bolder;
+		margin-left:auto !important;
+		margin-right:auto !important;
+		font-size:60px !important;
+	}
+	
+	#about-b .logo img{
+		width:290px;
+	}
+
+
 }
 
 </style>
@@ -358,7 +383,8 @@ margin: 30px auto !important;
 						好店到相報
 					</div>
 					<p class="des">
-						好店到相報！
+						讓你快速尋找附近口碑店家，不管是夜市美食、美食住宿、美妝血拚、玩樂地點或是台北、台中、高雄一日遊的附近店家，都可以好店評價馬上查，並加入直覺式評價、評價完之後直接在FB打卡等功能，還可以直接參考FB朋友及網友分享的評價內容。
+
 					</p>
 				</div>
 			</div>
@@ -369,7 +395,7 @@ margin: 30px auto !important;
 						噗朗克統計
 					</div>
 					<p class="des">
-						噗朗克統計
+						這是我們大學期間的第一支作品。你可以選定某一朋友，系統會統計出該朋友最近和你互動的頻率，藉此觀察他對你關心的程度是否下降或提升，可以拿來測試心儀的對象，是否也在偷偷暗戀你。
 					</p>
 				</div>
 			</div>
