--- a/FineBind/intern.html
+++ b/FineBind/intern.html
@@ -106,7 +106,7 @@ body {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">方白科技-加入我們</a>
+          <a class="navbar-brand" href="index.html">方白科技</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -249,12 +249,78 @@ body {
 	
 </style>
 
+<div id="blog" class="outer lg">
+	<a class="anchor" id="blog"></a>
+	<div class="container">
+	
+	</div>
+</div>
+
 <div id="join-b" class="outer lg">
 <a class="anchor" id="join"></a>
 	
 	<div class="container">
 	<h2>快點加入我們吧</h2>
-	<p>這裡可以方一些，要給新近實習生的話，可以讓他們知道我們公的氣氛。這裡可以方一些，要給新近實習生的話，可以讓他們知道我們公的氣氛。這裡可以方一些，要給新近實習生的話，可以讓他們知道我們公的氣氛。這裡可以放一些，要給新近實習生的話，可以讓他們知道我們公的氣氛。	</p>
+	<p>加入方白科技，你可以天馬行空地提出你的創意想法，在我們辦公室，你只會聽到三種聲音，一種就是工程師的murmur聲，另一種是行銷人員討論的聲音，剩下的就是大家嘴炮的歡笑聲了。</p>
+	<div>
+		<h2>履歷大加分</h2>	
+		<p>未來我們將會和實習生一起報名創業競賽，團隊由理工行銷商業多重背景的人組成，讓實習生們擁有更多資源去角逐比賽獎金，希望各位夥伴們在方白科技實習，除了可以獲得履歷上面的工作經驗，在活動經驗上，也有大大加分的效果。</p>
+	</div>
+	<div>
+		<h2>獎金一起分</h2>
+		<p>除了實習時間有車馬費補助，若是比賽有得獎，獎金由實習生均分，每名實習生可分至最多三萬元獎金。平均不到兩個月就有一個比賽，背後還有超強的團隊幫你撐腰，你還在等什麼？快來方白科技吧！以WISE團隊競賽為例，若得到佳作20000元，則實習生三人均分，一人額外可分到13333的獎金。</p>
+		<div class="table-responsive ">
+			<table align="left" class="table table-hover table-condensed table-striped" >
+				<tr>
+					<td valign="top"><p><strong>新思科技APPs設計競賽 </strong></p></td>
+					<td  valign="top"><p>四月份 </p></td>
+					<td valign="top"><p>佳作10000</p></td>
+				</tr>
+				<tr>
+					<td valign="top"><p><strong>搶鮮大賽 </strong></p></td>
+					<td  valign="top"><p>五月份 </p></td>
+					<td valign="top"><p>優秀10000</p></td>
+				</tr>
+				<tr>
+					<td valign="top"><p><strong>雲端服務創新競賽 </strong></p></td>
+					<td  valign="top"><p>六月份 </p></td>
+					<td valign="top"><p>銅牌50000</p></td>
+				</tr>
+				<tr>
+					<td valign="top"><p><strong>WISE</strong><strong>團隊競賽 </strong></p></td>
+					<td  valign="top"><p>九月份 </p></td>
+					<td valign="top"><p>佳作20000</p></td>
+				</tr>
+				<tr>
+					<td valign="top"><p><strong>資訊應用服務創新競賽 </strong></p></td>
+					<td  valign="top"><p>九月份 </p></td>
+					<td valign="top"><p>平均30000</p></td>
+				</tr>
+				<tr>
+					<td valign="top"><p><strong>詠夢獎 </strong></p></td>
+					<td  valign="top"><p>十月份 </p></td>
+					<td valign="top"><p>優選8000</p></td>
+				</tr>
+				<tr>
+					<td valign="top"><p><strong>2013</strong><strong>企劃案達人創意行銷競賽 </strong></p></td>
+					<td  valign="top"><p>十月份 </p></td>
+					<td valign="top"><p>季軍6000</p></td>
+				</tr>
+				<tr>
+					<td valign="top"><p><strong>龍騰微笑競賽 </strong></p></td>
+					<td  valign="top"><p>一月份 </p></td>
+					<td valign="top"><p>佳作100000</p></td>
+				</tr>
+				<tr>
+					<td valign="top"><p><strong>TBSA</strong><strong>全國大專創新企劃競賽 </strong></p></td>
+					<td  valign="top"><p>三月份 </p></td>
+					<td valign="top"><p>第三名5000</p></td>
+				</tr>
+			</table>
+<p>&nbsp;</p>
+			<p>&nbsp;</p>
+		</div>
+	</div>
 		<div class="btn-con">
 			<a class="btn btn-lg btn-primary" href="https://www.facebook.com/messages/finebindtech" >
 				私訊方白，加入我們！！
@@ -265,7 +331,7 @@ body {
 </div>
 
 <div id="footer" class="outer" style="background:white;">
-	<div class="container"
+	<div class="container" >
  <div style="margin:auto; text-align:center; padding:20px 0 ;">
  	方白科技
  </div>
