--- a/FineBind/intern.html
+++ b/FineBind/intern.html
@@ -84,6 +84,13 @@ body {
 		margin:20px auto;
 		float:none;
 	}
+	#join-b .sub {
+	width:100% !important;
+	float:none !important;
+}
+#rsmImg {
+	padding-top:0 !important;
+}
 }
 @media (min-width: 992px)  {
 	#want .row {width:970px; margin:auto;}
@@ -233,6 +240,7 @@ body {
 </div>
 <style>
 #join-b {
+	background:white;
 }
 .btn-con {
 	width:150px;
@@ -241,12 +249,27 @@ body {
 	display:block; margin:auto;
 }
 
-#join-b   p {
-	font-size:19px;	
-	
+#join-b p {
+	line-height:200%;
 }
-	
-	
+.table p {
+	line-height:100% !important;
+}
+#join-b .sub {
+	width:50%;
+	float:left;
+}
+.snd-block {
+	margin-bottom:20px;
+}
+
+#rsmImg {
+	padding-top:40px;
+}
+#rsmImg img {
+	display:block;
+	margin:auto;
+}
 </style>
 
 <div id="blog" class="outer lg">
@@ -259,14 +282,25 @@ body {
 <div id="join-b" class="outer lg">
 <a class="anchor" id="join"></a>
 	
-	<div class="container">
-	<h2>快點加入我們吧</h2>
-	<p>加入方白科技，你可以天馬行空地提出你的創意想法，在我們辦公室，你只會聽到三種聲音，一種就是工程師的murmur聲，另一種是行銷人員討論的聲音，剩下的就是大家嘴炮的歡笑聲了。</p>
-	<div>
-		<h2>履歷大加分</h2>	
-		<p>未來我們將會和實習生一起報名創業競賽，團隊由理工行銷商業多重背景的人組成，讓實習生們擁有更多資源去角逐比賽獎金，希望各位夥伴們在方白科技實習，除了可以獲得履歷上面的工作經驗，在活動經驗上，也有大大加分的效果。</p>
-	</div>
-	<div>
+	<div class="container clearfix">
+		<div class="clearfix">
+			<div class="sub">
+				<div>
+					<div class="snd-block">
+						<h2>快點加入我們吧</h2>
+						<p>加入方白科技，你可以天馬行空地提出你的創意想法，在我們辦公室，你只會聽到三種聲音，一種就是工程師的murmur聲，另一種是行銷人員討論的聲音，剩下的就是大家嘴炮的歡笑聲了。</p>
+					</div>
+					<div class="snd-block">
+						<h2>履歷大加分</h2>	
+						<p>未來我們將會和實習生一起報名創業競賽，團隊由理工行銷商業多重背景的人組成，讓實習生們擁有更多資源去角逐比賽獎金，希望各位夥伴們在方白科技實習，除了可以獲得履歷上面的工作經驗，在活動經驗上，也有大大加分的效果。</p>
+					</div>
+				</div>
+			</div>
+			<div id="rsmImg" class="sub">
+				<img src="img/resume.png">
+			</div>
+		</div>
+	<div class="snd-block">
 		<h2>獎金一起分</h2>
 		<p>除了實習時間有車馬費補助，若是比賽有得獎，獎金由實習生均分，每名實習生可分至最多三萬元獎金。平均不到兩個月就有一個比賽，背後還有超強的團隊幫你撐腰，你還在等什麼？快來方白科技吧！以WISE團隊競賽為例，若得到佳作20000元，則實習生三人均分，一人額外可分到13333的獎金。</p>
 		<div class="table-responsive ">
