--- a/MobileEco/index.html
+++ b/MobileEco/index.html
@@ -10,8 +10,8 @@
 <link href="css/all.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-</head>
-
+</head> 
+ 
 <body>
 
 <div id="banner" >
@@ -102,15 +102,15 @@
 
 <!-- InstanceEndEditable -->
 
-
-<div id="footer">
+  
+<footer id="footer"> 
 	<div class="container" style="">
 		<p>服務專線：(02) 2598-7495</p>
-		<p>E-mail：amanda@ntca.org.tw`</p>
-		<p>主辦單位：新北市政府經濟發展局 </p>
+		<p>E-mail：amanda@ntca.org.tw</p>
+		<p>主辦單位：新北市政府經濟發展局 </p> 
 		<p>執行單位：新北市電腦商業同業公會 </p>
 	</div>
-</div>
+</footer>
 
 <script src="js/jquery-2.1.1.min.js"></script>
 </body>
